--- a/ps-gpt.csproj
+++ b/ps-gpt.csproj
@@ -1,29 +1,31 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <!-- Assembly & build-->
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>powershell_gpt</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>gpt</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
     <Version>1.0.2</Version>
   </PropertyGroup>
 
+  <!-- Nuget package & release -->
   <PropertyGroup>
       <PackageReadmeFile>README.md</PackageReadmeFile>
       <PackageLicenseExpression>MIT</PackageLicenseExpression>
       <PackageReleaseNotes>A new version without hard-coded url and model name. At least the key was not hard-coded...</PackageReleaseNotes>
+      <Authors>Otto Teinonen (firstname.lastname@gmail.com)</Authors>
   </PropertyGroup>
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="\"/>
     <None Include="LICENSE.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
-
+  <!-- References -->
   <ItemGroup>
     <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.5" />
     <PackageReference Include="Markdig" Version="0.31.0" />
