Compiling version with test framework (not working) and di for necessary components

--- a/src/ps-gpt.csproj
+++ b/src/ps-gpt.csproj
@@ -30,6 +30,7 @@
   <!-- References -->
   <ItemGroup>
     <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.7" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Spectre.Console" Version="0.47.0" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.47.0" />
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="7.0.1" />
