--- a/src/ps-gpt.csproj
+++ b/src/ps-gpt.csproj
@@ -23,8 +23,8 @@
       <RepositoryType>git</RepositoryType>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="README.md" Pack="true" PackagePath="\" />
-    <None Include="LICENSE.md" Pack="true" PackagePath="\" />
+    <None Include="../README.md" Pack="true" PackagePath="\" />
+    <None Include="../LICENSE.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <!-- References -->
